--- a/src/components/LandingUi/style.scss
+++ b/src/components/LandingUi/style.scss
@@ -2,7 +2,6 @@
 .hero-ui{
      width: 100%;
      height: 110vh;
-     // background-color:red;
      .ui-image{
           width: 100%;
           height: 80vh;
@@ -11,7 +10,7 @@
           img{
                width: 100%;
                height: 100%;
-               object-fit: cover;
+               object-fit: contain;
                object-position: center;
           }
      }
