--- a/src/components/Slider/style.scss
+++ b/src/components/Slider/style.scss
@@ -1,46 +1,48 @@
-@import '../../styles/styleData.scss';
-.slider-wrapper{
-     width: 100%;
-     height: 100vh;
-     // background-color: red;
-     display: flex;
-     align-items: center;
-     justify-content: center;
-     .slider-container{
-          height: 90vh;
-          background-color:green;
-          overflow-x: scroll;
-          width: 900px;
-          @media (max-width: $smallTablet){
-               width: 400px;
-          }
-          button{
-               background-color: rgba(255, 255, 255, 0.911);
-               color: black;
-          }
-          button:disabled{
-               opacity: .9;
-               color: black;
-               background-color: white;
-          }
-          .slider-inner{
-               display: flex;
-               transform: translateX(0);
-               transition: transform 2s ease;
-               background-color: yellow;
-               width: calc(900*6px);
-               height: 90%;
-               transform-origin: left;
-               .box{
-                    width: 900px;
-                    height: 90%;
-                    margin: 1px;
-                    // object-fit: cover;
-                    background-color: red;
-                    @media (max-width: $smallTablet){
-                         width: 400px;
-                    }
-               }
-          }
-     }
+@import "../../styles/styleData.scss";
+.slider-wrapper {
+  width: 100%;
+  height: 50vh;
+  position: relative;
+  .slider-container {
+    height: 90vh;
+    background-color: transparent;
+    width: 500px;
+    @media (max-width: $smallTablet) {
+      width: 300px;
+    }
+    .button-container{
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      button , button:disabled {
+        width: 100px;
+        height: 30px;
+        border: none;
+        background-color: rgb(179, 154, 154);
+        outline: none;
+        color: white;
+      }
+    }
+    .slider-inner {
+      display: flex;
+      transform: translateX(0);
+      transition: transform 2s ease;
+      width: calc(500 * 6px);
+      height: 50%;
+      transform-origin: left;
+      .image-container {
+        width: 500px;
+        height: 90%;
+        overflow: hidden;
+        @media (max-width: $smallTablet) {
+          width: 300px;
+        }
+        img {
+          object-fit: cover;
+          width: 100%;
+          height: 250px;
+        }
+      }
+    }
+  }
 }
