--- a/src/components/Viewsite/style.scss
+++ b/src/components/Viewsite/style.scss
@@ -6,7 +6,7 @@
      height: 15vh;
      display: flex;
      align-items: center;
-     justify-content: center;
+     justify-content: flex-end;
      .viewsite-container{
           display: flex;
           align-items: center;
