--- a/src/styles/commonStyle.scss
+++ b/src/styles/commonStyle.scss
@@ -80,10 +80,70 @@
 @mixin description {
   font-weight: 300;
   font-size: 16px;
-  @media (max-width:$tablet){
-      font-size: 13px;
+  @media (max-width: $tablet) {
+    font-size: 13px;
   }
-  @media (max-width:$bigPhone){
-      font-size: 9px;
+  @media (max-width: $bigPhone) {
+    font-size: 9px;
   }
+}
+
+@mixin boldUppercase {
+  font-size: 3.2rem;
+  text-transform: uppercase;
+  font-weight: 800;
+
+  @media (max-width: $tablet) {
+    font-size: 2rem;
+  }
+  @media (max-width: $smallTablet) {
+    font-size: 1.5rem;
+  }
+}
+
+@mixin projectLandingText {
+  font-size: 10rem;
+  font-family: "Roboto", sans-serif;
+  margin-bottom: 2rem;
+  text-transform: uppercase;
+  font-weight: 600;
+  @media (max-width: $smallLaptop) {
+    font-size: 9rem;
+  }
+  @media (max-width: $tablet) {
+    font-size: 7.5rem;
+  }
+  @media (max-width: $smallTablet) {
+    font-size: 4rem;
+  }
+  @media (max-width: $phone) {
+    font-size: 3rem;
+  }
+  @media (max-width: $smallPhone) {
+    font-size: 2.5rem;
+  }
+}
+
+@mixin homeLanding {
+  font-weight: 600;
+  font-size: 2.3rem;
+  @media (max-width: $tablet) {
+    font-size: 1.8rem;
+  }
+  @media (max-width: $smallTablet) {
+    font-size: 1.4rem;
+  }
+  @media (max-width: $extraSmallTablet) {
+    font-size: 1.2rem;
+  }
+  @media (max-width: $bigPhone) {
+    font-size: 1rem;
+  }
+}
+
+@mixin footerSocial {
+  font-size: 20px;
+  font-weight: 600;
+  margin-right: 0.5rem;
+  letter-spacing: 0.1px;
 }
