--- a/src/components/Pages/Ecomerce/style.scss
+++ b/src/components/Pages/Ecomerce/style.scss
@@ -1,7 +1,51 @@
-.ecommerce-wrapper{
-     width: 100%;
-     height: 100vh;
-     display: grid;
-     place-items: center;
-     background-color:red;
+@import "../../../styles/commonStyle.scss";
+@import "../../../styles/styleData.scss";
+.ecommerce-wrapper {
+  width: 100%;
+//   min-height: 200vh;
+//   overflow: scroll;
+  .ecommerce-landing {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    @include CommonPadding;
+    .landing-heading {
+      width: 100%;
+      height: 50vh;
+     //  background-color: red;
+      margin-bottom: 0.5rem;
+      h2 {
+          @include projectLandingText;
+      }
+    }
+    .landing-subheading {
+      width: 100%;
+      height: 20vh;
+     //  background-color: red;
+      display: flex;
+      justify-content: flex-end;
+     h3{
+          @include boldUppercase;
+     }
+    }
+  }
+  .ecommerce-features{
+       width: 100%;
+       min-height: 200vh;
+       @include CommonPadding;
+       .features-title{
+            width: 100%;
+            height: 20vh;
+            padding-top: 2rem;
+            h2{
+                 color: $black;
+                 @include homeLanding;
+            }
+       }
+  }
+  .ecommerce-case{
+       @include CommonPadding;
+  }
 }
