--- a/src/components/Pages/Gigi-hadid/style.scss
+++ b/src/components/Pages/Gigi-hadid/style.scss
@@ -33,22 +33,7 @@
           font-weight: 600;
         }
         &:nth-child(2) {
-          font-size: 10rem;
-          @media ( max-width : $smallLaptop) {
-            font-size: 9rem;
-          }
-          @media ( max-width : $tablet) {
-            font-size: 7.5rem;
-          }
-          @media ( max-width : $smallTablet) {
-            font-size: 4rem;
-          }
-          @media ( max-width : $phone) {
-            font-size: 3rem;
-          }
-          @media ( max-width : $smallPhone) {
-            font-size: 2.5rem;
-          }
+          @include projectLandingText;
         }
         &:nth-child(3) {
           font-size: 3rem;
@@ -88,16 +73,7 @@
         height: 15vh;
       }
       h2{
-        font-size: 3.2rem;
-        text-transform: uppercase;
-        font-weight: 800;
-        
-        @media (max-width: $tablet){
-          font-size: 2rem;
-        }
-        @media (max-width: $smallTablet){
-          font-size: 1.5rem;
-        }
+        @include boldUppercase;
       }
     }
     .gigi-about-content {
