--- a/src/components/Slider/style.scss
+++ b/src/components/Slider/style.scss
@@ -30,6 +30,7 @@
       width: calc(500 * 6px);
       height: 50%;
       transform-origin: left;
+      background-color: red;
       .image-container {
         width: 500px;
         height: 90%;
