--- a/src/components/Pages/Home/style.scss
+++ b/src/components/Pages/Home/style.scss
@@ -3,7 +3,7 @@
 .home-wrapper {
   width: 100%;
   height: 300vh;
-  background-color: #fff;
+  background-color:#fff; 
   .home-hero {
     width: 100%;
     height: 100vh;
@@ -78,7 +78,7 @@
       h3 {
         font-size: 12px;
         font-weight: 600;
-        color: #4b7ef5;
+        color: $linkblue;
         letter-spacing: -0.3px;
         @media (max-width: $extraSmallTablet) {
           font-size: 8px;
@@ -130,9 +130,10 @@
       }
     }
     .item3 {
+      width: 100%;
       p {
         color: $black;
-        @include paragraph;
+        @include description;
       }
     }
   }
