--- a/src/styles/styleData.scss
+++ b/src/styles/styleData.scss
@@ -7,6 +7,7 @@ $lightWhite : #EDEDED;
 $lightBlack : #544949;
 $primary: #63899E;
 $secondary: #BEBEBE;
+$linkblue : #4b7ef5;
 
 // responsive sizes
 
