--- a/src/styles/globalStyle.scss
+++ b/src/styles/globalStyle.scss
@@ -9,5 +9,6 @@
         font-family: 'Poppins', sans-serif;
         // cursor: none;
         overscroll-behavior-y: none;
+        background-color:#000;
     }
 }
