--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -2,7 +2,7 @@
 .footer-wrapper {
   width: 100%;
   height: 50vh;
-  // background-color:red;
+  background-color:#fff;
   display: flex;
   align-items: flex-start;
   justify-content: center;
