--- a/src/components/Pages/Ecomerce/style.scss
+++ b/src/components/Pages/Ecomerce/style.scss
@@ -2,8 +2,10 @@
 @import "../../../styles/styleData.scss";
 .ecommerce-wrapper {
   width: 100%;
+  background-color: #fff;
 //   min-height: 200vh;
 //   overflow: scroll;
+
   .ecommerce-landing {
     width: 100%;
     height: 100vh;
