--- a/src/styles/globalStyle.scss
+++ b/src/styles/globalStyle.scss
@@ -7,7 +7,7 @@
     body{
         position: relative;
         font-family: 'Poppins', sans-serif;
-        // cursor: none;
+        cursor: none;
         overscroll-behavior-y: none;
         background-color:#000;
     }
