footer mobile responsiveness improved

--- a/src/components/Splide/style.scss
+++ b/src/components/Splide/style.scss
@@ -23,6 +23,12 @@
      letter-spacing: -2px;
      color: #000;
      font-size: 1.5rem;
+     @media ( max-width : $tablet){
+       font-size: 1.2rem;
+     }
+     @media ( max-width : $bigPhone){
+       font-size: 1rem;
+     }
   }
   p {
     width: 90%;
