--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -14,10 +14,14 @@
       font-size: 36px;
       font-weight:600;
       color: rgba(0, 0, 0, 0.788);
+      @include homeLanding;
     }
   }
   .footer-mail {
     margin: 1rem 0;
+    @media ( max-width : $tablet){
+      margin : .5rem 0;
+    }
     h4 {
       font-weight: 300;
       font-size: 16px;
@@ -39,6 +43,7 @@
       margin-top: 0.5rem;
       font-size: 16px;
       font-weight: 400;
+      @include paragraph;
       span {
         font-weight: 500;
       }
@@ -48,6 +53,7 @@
     h4 {
       font-size: 16x;
       font-weight: 300;
+      @include paragraph;
       span {
         font-weight: 400;
       }
