--- a/src/components/Pages/Home/style.scss
+++ b/src/components/Pages/Home/style.scss
@@ -3,6 +3,12 @@
 .home-wrapper {
   width: 100%;
   height: 300vh;
+  @media (max-width : $smallTablet){
+    height: 280vh;
+  }
+  @media (max-width : $bigPhone){
+    height: 240vh;
+  }
   background-color:#fff; 
   .home-hero {
     width: 100%;
@@ -139,7 +145,7 @@
   }
   .home-featured {
     width: 100%;
-    height: 200vh;
+    height: 100vh;
     @include CommonPadding;
     .featured-title {
       width: 100%;
