--- a/src/styles/commonStyle.scss
+++ b/src/styles/commonStyle.scss
@@ -159,4 +159,13 @@
   font-weight: 600;
   margin-right: 0.5rem;
   letter-spacing: 0.1px;
+  @media ( max-width : $tablet){
+    font-size: 16px;
+  }
+  @media ( max-width : $extraSmallTablet){
+    font-size: 14px;
+  }
+  @media ( max-width : $bigPhone){
+    font-size: 12px;
+  }
 }
