--- a/src/styles/globalStyle.scss
+++ b/src/styles/globalStyle.scss
@@ -4,10 +4,13 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    cursor: none;
+    &:hover{
+        cursor: none !important;
+    }
     body{
         position: relative;
         font-family: 'Poppins', sans-serif;
-        cursor: none;
         overscroll-behavior-y: none;
         background-color:#000;
     }
