rerendering problem fixed and loading page 50% build completed

--- a/src/components/Pages/Home/style.scss
+++ b/src/components/Pages/Home/style.scss
@@ -130,10 +130,16 @@
       }
     }
     .item2 {
+      @media (max-width: $bigPhone) {
+        border-radius: 8px;;
+      }
       img {
         width: 100%;
         height: 100%;
         object-fit: cover;
+        @media (max-width: $bigPhone) {
+          border-radius: 8px;;
+        }
       }
     }
     .item3 {
