--- a/src/components/Loading/style.scss
+++ b/src/components/Loading/style.scss
@@ -1,6 +1,54 @@
-.loading-wrapper{
-     width: 100%;
-     height: 100vh;
-     background-color: green;
-     z-index: 9999;
+@import '../../styles/styleData.scss';
+.loading-wrapper {
+  width: 100%;
+  height: 100vh;
+  background-color: #fff;
+  z-index: 9999;
+  position: relative;
+  .loading-container {
+    width: 500px;
+    height: 150px;
+    // background-color: red;
+    position: absolute;
+    bottom: -150px;
+    left: 0;
+    transform-origin: top left;
+    transform: rotateZ(-90deg);
+    @media (max-width: $smallTablet) {
+          height: 120px;
+     }
+    @media (max-width: $bigPhone) {
+          height: 100px;
+     }
+    .loading-text {
+      position: absolute;
+      top: 6rem;
+      left: 2rem;
+      @media (max-width: $smallTablet) {
+          top: 1rem;
+          left: 3rem;
+      }
+      @media (max-width: $bigPhone) {
+          left: 4rem;
+      }
+      
+    }
+    .loading-progress {
+      width: calc( (50vh/2)/100);
+      height: 3px;
+      background-color: $black;
+      position: absolute;
+      bottom: 0;
+    }
+  }
+  .loading-text-container {
+    width: 200px;
+    height: 100px;
+    // background-color: red;
+  }
+  .loading-version-container {
+    width: 200px;
+    height: 100px;
+    // background-color: red;
+  }
 }
