recent component rebuild process,for check responsive

--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -36,6 +36,11 @@
     display: flex;
     h3 {
      @include footerSocial;
+     
+    }
+    .resume a{
+      text-decoration: none;
+      color: $black;
     }
   }
   .footer-location {
