--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -2,7 +2,7 @@
 .footer-wrapper {
   width: 100%;
   height: 50vh;
-  background-color:#fff;
+  background-color:$black;
   display: flex;
   align-items: flex-start;
   justify-content: center;
@@ -13,7 +13,7 @@
     h2 {
       font-size: 36px;
       font-weight:600;
-      color: rgba(0, 0, 0, 0.788);
+      color: $white;
       @include homeLanding;
     }
   }
@@ -26,6 +26,7 @@
       font-weight: 300;
       font-size: 16px;
       @include description;
+      color: $white;
       span {
         font-weight: 500;
         cursor: pointer;
@@ -36,11 +37,12 @@
     display: flex;
     h3 {
      @include footerSocial;
+     color: $white;
      
     }
     .resume a{
       text-decoration: none;
-      color: $black;
+      color: $white;
     }
   }
   .footer-location {
@@ -49,6 +51,7 @@
       font-size: 16px;
       font-weight: 400;
       @include paragraph;
+      color: $white;
       span {
         font-weight: 500;
       }
@@ -59,6 +62,7 @@
       font-size: 16x;
       font-weight: 300;
       @include paragraph;
+      color: $white;
       span {
         font-weight: 400;
       }
