--- a/src/components/Pages/Home/style.scss
+++ b/src/components/Pages/Home/style.scss
@@ -3,151 +3,65 @@
 .home-wrapper {
   width: 100%;
   min-height: 300vh;
-  // @media (max-width: $smallTablet) {
-  //   height: 280vh;
-  // }
-  // @media (max-width: $bigPhone) {
-  //   height: 240vh;
-  // }
-  background-color: #fff;
+  background-color: $black;
   .home-hero {
     width: 100%;
-    height: 100vh;
+    height: 180vh;
+    // background-color: lightgray;
     display: flex;
-    align-items: flex-start;
-    justify-content: flex-end;
-    flex-direction: column;
-    @include CommonPadding;
-    .hero-heading {
-      margin-bottom: 0.5rem;
-      h2 {
-        @include homeLanding;
-      }
+    @media ( max-width : $smallLaptop){
+      height: 200vh;
     }
-    .hero-subheading {
-      margin-bottom: 5rem;
-      p {
-        font-weight: 500;
-        font-size: 16px;
-        color: rgba(0, 0, 0, 0.603);
-        @media (max-width: $tablet) {
-          font-size: 12px;
-        }
-        @media (max-width: $extraSmallTablet) {
-          font-size: 8px;
-        }
-        @media (max-width: $bigPhone) {
-          font-size: 5px;
-        }
-      }
+    @media ( max-width : $smallTablet){
+      flex-direction: column;;
+      height: 300vh;
     }
-    .hero-available {
-      width: 40rem;
-      height: 3rem;
-      display: flex;
-      align-items: center;
-      margin-bottom: 8rem;
-      // @media (max-width: $tablet) {
-      //   margin-bottom: 3rem;
-      // }
-      .beat-container {
-        width: 3rem;
-        height: 3rem;
-        position: relative;
-        @media (max-width: $extraSmallTablet) {
-          width: 2.5rem;
-          height: 2.5rem;
-        }
-        @media (max-width: $bigPhone) {
-          width: 2rem;
-          height: 2rem;
-        }
-        img {
-          width: 2rem;
-          height: 2rem;
-          position: absolute;
-          left: 50%;
-          top: 50%;
-          transform: translate(-50%, -50%);
-          border-radius: 50%;
-          pointer-events: none;
-          @media (max-width: $extraSmallTablet) {
-            width: 1.5rem;
-            height: 1.5rem;
-          }
-          @media (max-width: $bigPhone) {
-            width: 1rem;
-            height: 1rem;
-          }
-        }
-      }
-      h3 {
-        font-size: 12px;
-        font-weight: 600;
-        color: $linkblue;
-        letter-spacing: -0.3px;
-        @media (max-width: $extraSmallTablet) {
-          font-size: 8px;
-        }
-        @media (max-width: $bigPhone) {
-          font-size: 5px;
-        }
-      }
-    }
-  }
-  .home-gallery {
-    @include CommonPadding;
-    width: 100%;
-    height: 100vh;
-    display: grid;
-    grid-template-columns: 30% 60%;
-    grid-template-rows: 50% 25%;
-    grid-gap: 2rem;
-    justify-content: center;
-    align-content: center;
-    @media (max-width: $smallTablet) {
-      grid-template-columns: 30% 50%;
-    }
-    @media (max-width: $bigPhone) {
-      grid-template-columns: 100%;
-      grid-template-rows: 40% 25%;
-      height: 60vh;
-    }
-    .item {
-      overflow: hidden;
-    }
-    .item1 {
-      grid-row: 1 / span 2;
-
-      @media (max-width: $bigPhone) {
-        display: none;
-      }
-      img {
+    .hero-image-container,
+    .hero-text-container {
+      width: 50%;
+      height: 100%;
+      @include CommonPadding;
+      @media ( max-width : $smallTablet){
         width: 100%;
-        height: 100%;
-        object-fit: cover;
-        position: relative;
       }
     }
-    .item2 {
-      img {
+    .hero-text-container {
+      // background-color: lightblue;
+      padding-top: 20vh;
+      @media ( max-width : $smallTablet){
+        height: 180vh;
+      }
+      @media ( max-width : $bigPhone){
+        height: 230vh;
+      }
+      @media ( max-width : $phone){
+        height: 240vh;
+      }
+      h3{
+        font-size: 28px;
+        font-weight:400;
+        color: $white;
+        span{
+          font-size: 30;
+          font-weight: 500;
+        }
+        &:nth-child(2){
+          margin-top:2rem ;
+        }
+      }
+    }
+    .hero-image-container {
+      // background-color: lightgreen;
+      padding-top: 20vh;
+      img{
         width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
-    }
-    .item3 {
-      width: 100%;
-      p {
-        color: $black;
-        @include description;
       }
     }
   }
   .home-featured {
     width: 100%;
     min-height: 100vh;
-    
+
     .featured-title {
       width: 100%;
       @include CommonPadding;
@@ -157,14 +71,15 @@
       justify-content: flex-end;
       flex-direction: column;
       position: relative;
-      &::after{
-        content: 'SEE MORE';
+      &::after {
+        content: "SEE MORE";
         position: absolute;
         left: 0;
-        top:30%;
+        top: 30%;
         font-size: 12px;
         font-weight: 300;
         letter-spacing: 2px;
+        color: $white;
         @include CommonPadding;
         @media (max-width: $tablet) {
           font-size: 8px;
@@ -177,8 +92,8 @@
         font-weight: 400;
         font-size: 35px;
         letter-spacing: -1px;
-        margin-bottom: -12px ;
-        color: black;
+        margin-bottom: -12px;
+        color: $white;
         @media (max-width: $tablet) {
           font-size: 24px;
         }
@@ -186,24 +101,18 @@
           font-size: 18px;
         }
       }
-      h3{
+      h3 {
         font-weight: 200;
         font-size: 35px;
         letter-spacing: -1px;
-        color: $black;
+        color: $white;
         padding-bottom: 2rem;
-        @media (max-width : $tablet) {
+        @media (max-width: $tablet) {
           font-size: 25px;
         }
         @media (max-width: $tablet) {
           font-size: 20px;
         }
-        // @media (max-width: $bigPhone) {
-        //   width: 40%;
-        // }
-        // @media (max-width: $phone) {
-        //   width: 50%;
-        // }
       }
     }
   }
