--- a/src/components/Recent/style.scss
+++ b/src/components/Recent/style.scss
@@ -50,6 +50,7 @@
           h3 {
             color: $white;
             font-weight: 500;
+            transform: translateX(50px);
           }
         }
         .botton-container {
