some content added

--- a/src/components/LandingUi/style.scss
+++ b/src/components/LandingUi/style.scss
@@ -22,6 +22,7 @@
           justify-content: center;
           h4{
                @include description;
+               text-transform: uppercase;
           }
      }
      .ui-tech{
