--- a/src/components/Loading/style.scss
+++ b/src/components/Loading/style.scss
@@ -2,7 +2,7 @@
 .loading-wrapper {
   width: 100%;
   height: 100vh;
-  background-color: #fff;
+  background-color: $white;
   z-index: 9999;
   position: relative;
   display: flex;
