ecommerce page converted into new expense tracker page

--- a/src/components/Pages/Ecomerce/style.scss
+++ b/src/components/Pages/Ecomerce/style.scss
@@ -25,6 +25,7 @@
       justify-content: flex-end;
      h3{
           @include boldUppercase;
+          text-transform: none;
      }
     }
   }
