--- a/src/components/Pages/Ecomerce/style.scss
+++ b/src/components/Pages/Ecomerce/style.scss
@@ -2,7 +2,8 @@
 @import "../../../styles/styleData.scss";
 .ecommerce-wrapper {
   width: 100%;
-  background-color: #fff;
+  background-color: rgb(84, 76, 160);
+  color: #ffff !important;
   .ecommerce-landing {
     width: 100%;
     height: 100vh;
